--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "教育经历"
     url: "/#教育经历"
 
-  - title: "科研经历"
-    url: "/#科研经历"
+  - title: "研究经历"
+    url: "/#研究经历"
  
   - title: "竞赛与实践经历"
     url: "/#竞赛与实践经历"
