--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "杨正源"
-  avatar           : "images/favicon-32x32.png"
+  avatar           : "images/生活照2.png"
   bio              : 
   location         : "上海，中国"
   employer         :
